Fixed a flicker bug on the images

--- a/src/app/components/band-member/band-member.component.scss
+++ b/src/app/components/band-member/band-member.component.scss
@@ -16,62 +16,43 @@
   left: 0;
   border-radius: $borderRadius;
 }
-
-.band-member{
+.band-member {
   position: absolute;
   width: 85%;
   height: 100%;
   background-color: $black-lighter;
+  box-shadow: inset 0px 5px 6px -3px #111111;
   background-position: center;
   background-size: cover;
   border-radius: $borderRadius;
-  -webkit-box-shadow: inset 0px 0px 27px 3px rgba(0,0,0,0.75);
-  -moz-box-shadow: inset 0px 0px 27px 3px rgba(0,0,0,0.75);
-  box-shadow: inset 0px 0px 27px 3px rgba(0,0,0,0.75);
-  .band-member-info-container{
+  .images {
+    width: 100%;
     height: 100%;
-    .band-member-info{
-      color: white;
+    z-index: 4;
+    border-radius: $borderRadius;
+    position: absolute;
+    img {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
       height: 100%;
-      flex-direction: column;
-      justify-content: flex-end;
-      .band-member-info-box{
-        filter: $filter-shadow;
-        background-color: rgba(33, 36, 41, 0.75);
-        border-radius:  0 0 $borderRadius $borderRadius;
-        padding: 0 10px;
-        div{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-        }
-        .name{
-          word-break: break-word;
-          font-weight: 900;
-          font-size: 20px;
-        }
-        .bio{
-          text-align: center;
-          line-height: 25px;
-          font-size: 14px;
-        }
-        .instrument{
-          text-transform: uppercase;
-          font-weight: 900;
-          font-size: 30px;
-        }
-      }
+      border-radius: $borderRadius;
+      position: absolute;
+      display: none;
     }
+  }
+  .info{
+    position: absolute;
+    bottom: 0;
+    padding: 0 10px;
+    filter: $filter-shadow;
+    border-radius: 0 0 $borderRadius $borderRadius ;
+    z-index: 5;
+    color: $white;
+    text-align: center;
+    background: rgba(33, 36, 41, .85)
   }
 }
 
-.band-member-info-container .band-member-info{
-  display: none;
-}
 
-
-.band-member-info-container:hover .band-member-info{
-  display: flex;
-}
 
