--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -120,3 +120,9 @@ $navWidth: 80vw;
     }
   }
 }
+
+@media only screen and (max-width: 767px) {
+  .nav-container{
+    display: none;
+  }
+}
